Create restaurantInDex and Search

--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/RestaurantAdmin/CreateYourRestaurant.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/RestaurantAdmin/CreateYourRestaurant.cshtml
@@ -1,8 +1,8 @@
 ﻿@model RestaurantCreateVm
-<header>
+<head>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.js"></script>
-</header>
+</head>
 <section class="parallax-window" id="short" data-parallax="scroll" data-image-src="/assets/img/sub_header_cart.jpg" data-natural-width="1400" data-natural-height="350">
     <div id="subheader">
         <div id="sub_content">
@@ -14,17 +14,6 @@
 </section><!-- End section -->
 <!-- End SubHeader ============================================ -->
 
-<div id="position">
-    <div class="container">
-        <ul>
-            <li><a href="#0">Home</a></li>
-            <li><a href="#0">Category</a></li>
-            <li>Page active</li>
-        </ul>
-        <a href="#0" class="search-overlay-menu-btn"><i class="icon-search-6"></i> Search</a>
-    </div>
-</div><!-- Position -->
-<!-- Content ================================================== -->
 <div class="container margin_60_35">
     <div class="main_title margin_mobile">
         <h2 class="nomargin_top">Increase your customers</h2>
