--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/RestaurantAdmin/Index.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/RestaurantAdmin/Index.cshtml
@@ -68,7 +68,7 @@
                     <a asp-action="UpdateYourRestaurant" asp-controller="restaurantAdmin" asp-route-id="@Model.RestaurantItem.Id">Update restaurant</></a>
                 </li>
                 <li>
-                    <a href="#section-3" class="icon-settings"><span>Settings</span></a>
+                    <a asp-action="GetAllOrderItems" asp-controller="restaurantAdmin"><span>Get All Sales</span></a>
                 </li>
             </ul>
         </nav>
