--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Profile/MyOrders.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Profile/MyOrders.cshtml
@@ -42,10 +42,10 @@
         <nav>
             <ul>
                 <li>
-                    <a class="icon-profile"><span>Main info</span></a>
+                    <a asp-action="MyOrders" asp-controller="Profile"><span>My Orders</span></a>
                 </li>
                 <li>
-                    <a href="#section-3" class="icon-settings"><span>Settings</span></a>
+                    <a asp-action="MyDeliveredOrders" asp-controller="Profile"><span>My Delivered Orders</span></a>
                 </li>
             </ul>
         </nav>
