--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Profile/MyDeliveredOrders.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Profile/MyDeliveredOrders.cshtml
@@ -39,12 +39,13 @@
 <div class="container margin_60">
     <div id="tabs" class="tabs">
         <nav>
+            
             <ul>
                 <li>
-                    <a class="icon-profile"><span>Main info</span></a>
+                    <a asp-action="MyOrders" asp-controller="Profile"><span>My Orders</span></a>
                 </li>
                 <li>
-                    <a href="#section-3" class="icon-settings"><span>Settings</span></a>
+                    <a asp-action="MyDeliveredOrders" asp-controller="Profile"><span>My Delivered Orders</span></a>
                 </li>
             </ul>
         </nav>
